footer alignment fix

--- a/styles.css
+++ b/styles.css
@@ -147,11 +147,11 @@ nav {
 /* header end footer(Courses) start*/
 
 .footer-title {
-  padding: 5px;
+  padding: 30px;
 }
 
 .learning-fields {
-  padding: 5px;
+  padding: 30px;
 }
 
 .field-list {
